src/snapshots/treetop_core__engine__tests__test_create_host_requests__bob_create_host_allow.snap
---
source: src/engine.rs
expression: decision
---
{
  "Allow": {
    "policy": {
      "literal": "permit (\n    principal == User::\"bob\",\n    action == Action::\"create_host\",\n    resource is Host\n) when {\n    resource.name like \"bob*\" &&\n    resource.ip.isInRange(ip(\"192.0.0.0/24\"))\n};",
      "json": {
        "action": {
          "entity": {
            "id": "create_host",
            "type": "Action"
          },
          "op": "=="
        },
        "conditions": [
          {
            "body": {
              "&&": {
                "left": {
                  "like": {
                    "left": {
                      ".": {
                        "attr": "name",
                        "left": {
                          "Var": "resource"
                        }
                      }
                    },
                    "pattern": [
                      {
                        "Literal": "b"
                      },
                      {
                        "Literal": "o"
                      },
                      {
                        "Literal": "b"
                      },
                      "Wildcard"
                    ]
                  }
                },
                "right": {
                  "isInRange": [
                    {
                      ".": {
                        "attr": "ip",
                        "left": {
                          "Var": "resource"
                        }
                      }
                    },
                    {
                      "ip": [
                        {
                          "Value": "192.0.0.0/24"
                        }
                      ]
                    }
                  ]
                }
              }
            },
            "kind": "when"
          }
        ],
        "effect": "permit",
        "principal": {
          "entity": {
            "id": "bob",
            "type": "User"
          },
          "op": "=="
        },
        "resource": {
          "entity_type": "Host",
          "op": "is"
        }
      }
    }
  }
}
